implemented stage icons, improving dual selection mode, updated dependencies, misc improvements